# cyber-sleuth-accessibility

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/: game_structs.h  game_text.h  hooks.h  logger.h  memory_inspector.h  offsets.h  plugin_util.h  speech_manager.h  text_capture.h  ui_probe.h
include/handlers/: handler_utils.h  main_menu_handler.h  option_handler.h  player_setting_handler.h  scenario_select_handler.h  subtitle_handler.h  talk_comm_handler.h  talk_handler.h  tick_handler.h  title_handler.h  title_logo_handler.h  yesno_handler.h
llm-docs/: CLAUDE.md  text-tables.md
llm-scratchpad/: current_status.md  game-info-raw.md  local-data-catalog.md
llm-scratchpad/code-index/: CMakeLists.txt.md
llm-scratchpad/code-index/include/: game_structs.h.md  hooks.h.md  logger.h.md  memory_inspector.h.md  offsets.h.md  speech_manager.h.md  text_capture.h.md  ui_probe.h.md
llm-scratchpad/code-index/include/handlers/: main_menu_handler.h.md  scenario_select_handler.h.md  subtitle_handler.h.md  title_handler.h.md  yesno_handler.h.md
llm-scratchpad/code-index/src/: hooks.cpp.md  logger.cpp.md  main.cpp.md  memory_inspector.cpp.md  speech_manager.cpp.md  text_capture.cpp.md  ui_probe.cpp.md
llm-scratchpad/code-index/src/handlers/: main_menu_handler.cpp.md  scenario_select_handler.cpp.md  subtitle_handler.cpp.md  title_handler.cpp.md  yesno_handler.cpp.md
src/: game_text.cpp  hooks.cpp  logger.cpp  main.cpp  memory_inspector.cpp  plugin_util.cpp  speech_manager.cpp  text_capture.cpp  ui_probe.cpp
src/handlers/: main_menu_handler.cpp  option_handler.cpp  player_setting_handler.cpp  scenario_select_handler.cpp  subtitle_handler.cpp  talk_comm_handler.cpp  talk_handler.cpp  title_handler.cpp  title_logo_handler.cpp  yesno_handler.cpp
